VANITYS13: WIP  Refactor product-related classes to improve clarity and functionality, including changes to ProductOperations, exception handling, and mapping logic. Introduced CategoryNotFoundException and updated ProductUserRelation to manage review associations.